--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -21,13 +21,12 @@
 <!-- home hero section -->
 <div class="jumbotron">
   <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
-  <p class="jumbotron-heading">{{site.author}} !</p>
+  <p class="jumbotron-heading">noy.log</p>
 
   <p class="lead" id="typewriteText"></p>
-  <!-- <span>
-    {%- include github_star_button.html -%}
+  <span>
     {%- include github_fork_button.html -%}
-  </span> -->
+  </span>
   <!-- uncomment/modify buttons as you want-->
   <!-- <div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/get-started">
