--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,9 +28,9 @@
           </div>
           <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link" href="{{site.url}}{{site.baseurl}}/styleguide">
+              <!-- <a class="nav-link" href="{{site.url}}{{site.baseurl}}/styleguide">
                  Styleguide
-              </a>
+              </a> -->
             </li>
             <li class="nav-item">
               <a class="nav-link toggle-search-button" href="#search">
